<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30sp"
    android:layout_marginRight="30sp"
    android:layout_marginTop="60sp"
    android:background="@color/translucent_black"
    android:orientation="vertical"
    android:padding="15sp" >
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:src="@drawable/swipe_hand" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/swipe_help"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

    <CheckBox 
        android:id="@+id/show_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/show_help_again"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/dismiss_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/ok_got_it"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark" />

</LinearLayout>